--- a/Modulo Juegos.html
+++ b/Modulo Juegos.html
@@ -7,6 +7,9 @@
     <title>Modulo Juegos</title>
 </head>
 <body>
-    
+    <a  href="buscaminas2.html">JUGAR</a>
+    <a  href="Storytelling.html">JUGAR</a>
+    <a  href="Juego Sheldon.html">JUGAR</a>
+    <a  href="Simon dice.html">JUGAR</a>
 </body>
 </html>
