--- a/Modulo Juegos.html
+++ b/Modulo Juegos.html
@@ -7,9 +7,33 @@
     <title>Modulo Juegos</title>
 </head>
 <body>
-    <a  href="buscaminas2.html">JUGAR</a>
-    <a  href="Storytelling.html">JUGAR</a>
-    <a  href="Juego Sheldon.html">JUGAR</a>
-    <a  href="Simon dice.html">JUGAR</a>
+    <div class="h1">
+         <h1>Bienvenido al Módulo de Juegos de Ignacio Martínez Cano</h1>
+    </div>
+   
+    <div class="contenedor-juegos">
+        <a href="buscaminas2.html">
+            <img src="buscaminas.png">
+            <p>Buscaminas</p>
+        </a>
+    </div>
+    <div class="contenedor-juegos">
+        <a href="Storytelling.html">
+            <img src="storitelling.webp">
+            <p>Storytelling</p>
+        </a>
+    </div>
+    <div class="contenedor-juegos">
+        <a href="Simon dice.html">
+            <img src="simondice.jpg" >
+            <p>Simon Dice</p>
+        </a>
+    </div>
+    <div class="contenedor-juegos">
+        <a href="Juego Sheldon.html">
+            <img src="juego sheldon img.webp">
+            <p>Juego Sheldon</p>
+        </a>
+    </div>
 </body>
 </html>
